k8s/netpolicy/management-ui.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: management-ui
  annotations:
    linkerd.io/inject: enabled
  labels:
    role: management-ui 
---
apiVersion: v1
kind: Service
metadata:
  name: management-ui 
  namespace: management-ui 
spec:
  type: NodePort
  ports:
  - port: 80 
    targetPort: 9001
  selector:
    role: management-ui 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: management-ui 
  namespace: management-ui 
spec:
  replicas: 1
  selector:
    matchLabels:
      role: management-ui
  template:
    metadata:
      labels:
        role: management-ui 
    spec:
      containers:
      - name: management-ui 
        image: calico/star-collect:v0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9001
